force-app/main/default/objects/Case/fields/AIW_Supported_Loader__c.field-meta.xml
<CustomField>
    <fullName>AIW_Supported_Loader__c</fullName>
    <description
  >Enter the specific loader name for Application Interface Wizard templates where applicable</description>
    <label>AIW Supported Loader</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AIW_Supported_Loaders</valueSetName>
    </valueSet>
</CustomField>