force-app/main/default/objects/Case/fields/AP_Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>AP_Billing_Notes__c</fullName>
    <formula>Account.Address__c</formula>
    <label>AP/Billing Notes</label>
    <type>Text</type>
</CustomField>