force-app/main/default/objects/Case/fields/Client_Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Client_Operating_System__c</fullName>
    <label>Client Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows 10.0</fullName>
            </value>
            <value>
                <fullName>Windows 8.1</fullName>
            </value>
            <value>
                <fullName>Windows 8</fullName>
            </value>
            <value>
                <fullName>Windows 7</fullName>
            </value>
            <value>
                <fullName>Windows Vista</fullName>
            </value>
            <value>
                <fullName>Windows XP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>