force-app/main/default/objects/Case/fields/Clipboard_Contents__c.field-meta.xml
<CustomField>
    <fullName>Clipboard_Contents__c</fullName>
    <label>Clipboard Contents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>