force-app/main/default/objects/Case/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Content Published</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Enquiry Resolved</fullName>
            </value>
            <value>
                <fullName>Fixed - Not Verified</fullName>
            </value>
            <value>
                <fullName>Fixed - Verified</fullName>
            </value>
            <value>
                <fullName>Marketing Published</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Not Reproducible</fullName>
            </value>
            <value>
                <fullName>Obsolete Function</fullName>
            </value>
            <value>
                <fullName>Oracle API Bug</fullName>
            </value>
            <value>
                <fullName>Oracle EBS Enhancement Required</fullName>
            </value>
            <value>
                <fullName>Oracle Patch Applied</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Request Declined</fullName>
            </value>
            <value>
                <fullName>Update Complete</fullName>
            </value>
            <value>
                <fullName>Will not be addressed</fullName>
            </value>
            <value>
                <fullName>Workaround Resolved</fullName>
            </value>
            <value>
                <fullName>Working as Designed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>