force-app/main/default/objects/Case/fields/Content_Required_By__c.field-meta.xml
<CustomField>
    <fullName>Content_Required_By__c</fullName>
    <label>Content Required By</label>
    <type>Date</type>
</CustomField>