force-app/main/default/objects/Case/fields/Content_Required_For_del__c.field-meta.xml
<CustomField>
    <fullName>Content_Required_For_del__c</fullName>
    <label>Media Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Linked-In</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Guide</fullName>
            </value>
            <value>
                <fullName>Sales central</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>User Group</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>