force-app/main/default/objects/Case/fields/Content_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Content_Type_del__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Graphic</fullName>
            </value>
            <value>
                <fullName>Marketing Request</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Product Demo Test</fullName>
            </value>
            <value>
                <fullName>Shor Message</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>