force-app/main/default/objects/Case/fields/E2CP__AdditionalAvailable__c.field-meta.xml
<CustomField>
    <fullName>E2CP__AdditionalAvailable__c</fullName>
    <description
  >Stores additional email addresses on the New Comment page Available Case Recipients section.</description>
    <label>Additional Available</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>