force-app/main/default/objects/Case/fields/E2CP__AdditionalBCC__c.field-meta.xml
<CustomField>
    <fullName>E2CP__AdditionalBCC__c</fullName>
    <description
  >Stores email addresses entered on the New Comment page Additional BCC section.</description>
    <label>Additional BCC</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>