force-app/main/default/objects/Case/fields/E2CP__Disable_Email_Distribution__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Disable_Email_Distribution__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Setting this field to true disables the Email Distribution feature on a case by case basis if Email Distribution is enabled.</description>
    <label>Disable Email Distribution</label>
    <type>Checkbox</type>
</CustomField>