force-app/main/default/objects/Case/fields/E2CP__ExtraEmails__c.field-meta.xml
<CustomField>
    <fullName>E2CP__ExtraEmails__c</fullName>
    <description
  >Stores all email addresses on inbound emails. This data is used by Auto Create Contacts, Auto Add Case Team Members and Auto Add Contact Roles.</description>
    <label>ExtraEmails</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>