force-app/main/default/objects/Case/fields/E2CP__HistoryText_Inc_Private__c.field-meta.xml
<CustomField>
    <fullName>E2CP__HistoryText_Inc_Private__c</fullName>
    <label>History Text Inc Private</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>