force-app/main/default/objects/Case/fields/E2CP__Most_Recent_Public_Comment_HTML__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Most_Recent_Public_Comment_HTML__c</fullName>
    <description
  >Contains the most recent public comment, as it was typed, without any pre-pended recipients or attachments notations that may be added to the case comment record. Used when HTML Support is enabled.</description>
    <label>Most Recent Public Comment (HTML)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>