force-app/main/default/objects/Case/fields/Excel_Version__c.field-meta.xml
<CustomField>
    <fullName>Excel_Version__c</fullName>
    <label>Excel Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2016 (v16.0)</fullName>
            </value>
            <value>
                <fullName>2013 (v15.0)</fullName>
            </value>
            <value>
                <fullName>2010 (v14.0)</fullName>
            </value>
            <value>
                <fullName>2007 (v12.0)</fullName>
            </value>
            <value>
                <fullName>2003 (v11.0)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>