force-app/main/default/objects/Case/fields/Flag_for_Regression__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_Regression__c</fullName>
    <description>Identifies if this case should be included in the regression of this release</description>
    <inlineHelpText>Usually select &apos;Yes&apos; if case not tested in the latest test build, is a high use, new, or problem area of the product</inlineHelpText>
    <label>Flag for Regression?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>