force-app/main/default/objects/Case/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>For internal use to allow reporting on issues relating to specific Wizard functions</description>
    <inlineHelpText>For internal use to allow reporting on issues relating to specific Wizard functions</inlineHelpText>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attachments</fullName>
            </value>
            <value>
                <fullName>Data Entry Forms</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Mode</fullName>
            </value>
            <value>
                <fullName>Processing Form</fullName>
            </value>
            <value>
                <fullName>Ribbon Main</fullName>
            </value>
            <value>
                <fullName>Ribbon Setup</fullName>
            </value>
            <value>
                <fullName>Sheet</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
            <value>
                <fullName>Validate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>