force-app/main/default/objects/Case/fields/Has_Clipboard_Contents__c.field-meta.xml
<CustomField>
    <fullName>Has_Clipboard_Contents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Clipboard Contents</label>
    <type>Checkbox</type>
</CustomField>