force-app/main/default/objects/Case/fields/Hour_Modified__c.field-meta.xml
<CustomField>
    <fullName>Hour_Modified__c</fullName>
    <formula>FLOOR ( MOD(  Inbound_Email__c   - ($System.OriginDateTime + 12/24),1) *24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour Modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>