force-app/main/default/objects/Case/fields/Hour_Opened__c.field-meta.xml
<CustomField>
    <fullName>Hour_Opened__c</fullName>
    <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 12/24),1) *24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>