force-app/main/default/objects/Case/fields/Hour_Updated__c.field-meta.xml
<CustomField>
    <fullName>Hour_Updated__c</fullName>
    <formula
  >FLOOR ( MOD( LastModifiedDate - ($System.OriginDateTime + 12/24),1) *24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour Updated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>