force-app/main/default/objects/Case/fields/Inbound_Email__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Email__c</fullName>
    <label>Inbound Email</label>
    <type>DateTime</type>
</CustomField>