force-app/main/default/objects/Case/fields/Include_in_Test_Script__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Test_Script__c</fullName>
    <description>If this is not already in a test script and needs to be added select &apos;Yes&apos;</description>
    <inlineHelpText>If this is not already in a test script and needs to be added select &apos;Yes&apos;
This flag should be updated to &apos;Done&apos; when completed</inlineHelpText>
    <label>Include in Test Script?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>