force-app/main/default/objects/Case/fields/Integrator__c.field-meta.xml
<CustomField>
    <fullName>Integrator__c</fullName>
    <label>Integrator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cloud_Product_Integrators</valueSetName>
    </valueSet>
</CustomField>