force-app/main/default/objects/Case/fields/Internal_Username__c.field-meta.xml
<CustomField>
    <fullName>Internal_Username__c</fullName>
    <description>Enter the username you logged in as when the error/issue occurred</description>
    <label>Internal Username</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SERVICES</fullName>
            </value>
            <value>
                <fullName>OPERATIONS</fullName>
            </value>
            <value>
                <fullName>MFG</fullName>
            </value>
            <value>
                <fullName>OPM</fullName>
            </value>
            <value>
                <fullName>MFG2</fullName>
            </value>
            <value>
                <fullName>AALLAN</fullName>
            </value>
            <value>
                <fullName>CASEYC</fullName>
            </value>
            <value>
                <fullName>COMMS</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>OTHER - See comments</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>