force-app/main/default/objects/Case/fields/OpenLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OpenLastModifiedDate__c</fullName>
    <description>Date the Case was last set to Status &quot;Open&quot;</description>
    <label>OpenLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>