force-app/main/default/objects/Case/fields/Oracle_EBS_Version__c.field-meta.xml
<CustomField>
    <fullName>Oracle_EBS_Version__c</fullName>
    <label>Oracle EBS Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11.5.10</fullName>
            </value>
            <value>
                <fullName>12.0.6</fullName>
            </value>
            <value>
                <fullName>12.1.1</fullName>
            </value>
            <value>
                <fullName>12.1.2</fullName>
            </value>
            <value>
                <fullName>12.1.3</fullName>
            </value>
            <value>
                <fullName>12.2.1</fullName>
            </value>
            <value>
                <fullName>12.2.2</fullName>
            </value>
            <value>
                <fullName>12.2.3</fullName>
            </value>
            <value>
                <fullName>12.2.4</fullName>
            </value>
            <value>
                <fullName>12.2.5</fullName>
            </value>
            <value>
                <fullName>12.2.6</fullName>
            </value>
            <value>
                <fullName>12.2.7</fullName>
            </value>
            <value>
                <fullName>12.2.8</fullName>
            </value>
            <value>
                <fullName>12.2.9</fullName>
            </value>
            <value>
                <fullName>12.2.10</fullName>
            </value>
            <value>
                <fullName>Fusion 12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>