force-app/main/default/objects/Case/fields/Oracle_ERP_Cloud_Version__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ERP_Cloud_Version__c</fullName>
    <label>Oracle ERP Cloud Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21D</fullName>
            </value>
            <value>
                <fullName>21C</fullName>
            </value>
            <value>
                <fullName>21B</fullName>
            </value>
            <value>
                <fullName>21A</fullName>
            </value>
            <value>
                <fullName>20D</fullName>
            </value>
            <value>
                <fullName>1.0</fullName>
                <isActive>false</isActive>
                <label>1.0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>