force-app/main/default/objects/Case/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The product you entered is either not valid or has been deactivated</errorMessage>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.Name</field>
            <operation>notEqual</operation>
            <value>Cloud AP Invoices</value>
        </filterItems>
        <filterItems>
            <field>Product2.Name</field>
            <operation>notEqual</operation>
            <value>Cloud AR Invoices</value>
        </filterItems>
        <filterItems>
            <field>Product2.Name</field>
            <operation>notEqual</operation>
            <value>Cloud AR Receipts</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>