force-app/main/default/objects/Case/fields/Product_SSP__c.field-meta.xml
<CustomField>
    <fullName>Product_SSP__c</fullName>
    <description
  >Product list used in the self-service portal/helpdesk only</description>
    <label>Product.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement &amp; Funding Wizard</fullName>
            </value>
            <value>
                <fullName>AP Invoice Wizard</fullName>
            </value>
            <value>
                <fullName>Application Interface Wizard</fullName>
            </value>
            <value>
                <fullName>AR Invoice API Wizard</fullName>
            </value>
            <value>
                <fullName>AR Invoice Wizard</fullName>
            </value>
            <value>
                <fullName>AR Receipt Wizard</fullName>
            </value>
            <value>
                <fullName>Asset Wizard</fullName>
            </value>
            <value>
                <fullName>Bill of Materials Wizard</fullName>
            </value>
            <value>
                <fullName>Budget Wizard</fullName>
            </value>
            <value>
                <fullName>Customer Wizard</fullName>
            </value>
            <value>
                <fullName>Element Entry Wizard</fullName>
            </value>
            <value>
                <fullName>Employee Wizard</fullName>
            </value>
            <value>
                <fullName>Event Wizard</fullName>
            </value>
            <value>
                <fullName>Excel-Out</fullName>
            </value>
            <value>
                <fullName>GL Wizard</fullName>
            </value>
            <value>
                <fullName>Item Catalog UDA Wizard</fullName>
            </value>
            <value>
                <fullName>Item Cost Wizard</fullName>
            </value>
            <value>
                <fullName>Item Extension Wizard</fullName>
            </value>
            <value>
                <fullName>Item Wizard</fullName>
            </value>
            <value>
                <fullName>Labor Cost Rate Wizard</fullName>
            </value>
            <value>
                <fullName>Material Transaction Wizard</fullName>
            </value>
            <value>
                <fullName>Mobile Stock Take</fullName>
            </value>
            <value>
                <fullName>PO Receiving Wizard</fullName>
            </value>
            <value>
                <fullName>PO Wizard</fullName>
            </value>
            <value>
                <fullName>Price List Wizard</fullName>
            </value>
            <value>
                <fullName>Pricing Modifiers Wizard</fullName>
            </value>
            <value>
                <fullName>Project Wizard</fullName>
            </value>
            <value>
                <fullName>Requisition Wizard</fullName>
            </value>
            <value>
                <fullName>Routing Wizard</fullName>
            </value>
            <value>
                <fullName>Sales Order Wizard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>